--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
       {
         "src": "Medication.js",
-        "use": "@vercel/python"
+        "use": "@vercel/node"
       }
     ],
     "routes": [
